--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
     "chai": "^4.3.4",
+    "glob": "^8.0.3",
     "mocha": "^6.2.3",
     "mocha-multi": "^1.1.3"
   }
